environments/gloo-edge/httpbin-bookinfo/bookinfo-config/base/bookinfo-vs.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - 'bookinfo.glootest.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        multi:
          destinations:
          - destination:
              upstream:
                name: bookinfo-v1-productpage-9080
                namespace: gloo-system
            weight: 5
          - destination:
              upstream:
                name: bookinfo-v2-productpage-9080
                namespace: gloo-system
            weight: 5
